# AiAI

./: .gitmodules  README.md  index.html  settings.gradle.kts
3D Human Motion/: Readme.md
3D Human Motion/MDM/: MDM_train_evaluate_visualize_CHAD_v0.1.ipynb  files
3D Human Motion/T2M/: Files  README.md  (+1 more)
3D Human Motion/T2M-GPT/: files  npy_text_mapping_v1.ipynb
Cancer App/: README.md  bc-inception-v3-custom-model.ipynb
Course Attendance Robot/: ClassVision_Course_Attendance_Robot_CodeFile.ipynb  ClassVision_Course_Attendance_Robot_Research_Paper_Ankit_K_Aggarwal.ipynb  Generate Embeddings.py  README.md  TestFile.txt  index.html  known_faces_5050px_a.pickle
Course Video Understanding/: README.md  SparrowVQE_Demo.ipynb  app.py  users.db
High Quality Voice Cloning/: README.MD  index.html
High Quality Voice Cloning/Custom-Model-2/: README.md  pyproject.toml  test_models.ipynb  train_coarse.ipynb  train_fine.ipynb  train_semantic.ipynb
High-Quality-Voice-Cloning/: README.md  index.css  index.html
Image Generation for Medical Applications/: Stable_diffusion_colab_notebook_new.ipynb  dalle_mini_inference_pipeline.ipynb
KatzBot/: Custom LLM Trial0.ipynb  Custom LLM Trial1.py  Finetuning_Phi2.ipynb  LLM fine tuning.ipynb  Merging trained models.ipynb  ProjectReport.html  Questgen_AI.ipynb  README.md  gpt2_model.ipynb  katzbot_app.py
Machine Learning Chat Robot for Students/: README.md  app1.py  config.py  test_stop2.py
VetMedGPT/: README.md
Voice Cloning/: README.md
Voice_cloning/: README.md
app/: build.gradle.kts
save/: args.json
(+2725 files in other folders)
